package org.fcu.ooseproject.entity.type;

public enum IssueType {
    Daily, Schedule
}
