package org.fcu.ooseproject.entity.type;

public enum StatusType {
    TODO, InProgress, Finished
}
